fixed header on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -1155,9 +1155,6 @@ div#specialBox, div#specialBox2 {
       -webkit-clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%);
       clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%);
       height: 100vh; } }
-  @media only screen and (min-resolution: 192dpi) and (min-width: 37.5em), only screen and (-webkit-min-device-pixel-ratio: 2) and (min-width: 37.5em), only screen and (min-width: 125em) {
-    .header {
-      background-image: url("../img/heroimg2.jpg"); } }
   @media only screen and (max-width: 37.5em) {
     .header {
       background: linear-gradient(to right, #f7f7f7, #E5E5E5);
